made some code changes in style.css

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body, #container {
   background-size: contain;            
   background-attachment: fixed;       
   
-  background-color: #000;              
+  background-color: #fac0c0;              
   min-height: 100vh;                  
 }
 
@@ -33,13 +33,14 @@ body, #container {
 
 
   background-size: cover;
-  color: #444;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
   overflow-x: hidden;
-}
+} 
+
 
 /* Grid Input Section */
 label, input, #set-grid {
@@ -71,6 +72,7 @@ label, input, #set-grid {
   background-color: #ffaad5;
   transform: scale(1.1);
 }
+
 
 /* Controls Box */
 .controls {
@@ -108,7 +110,7 @@ button:active {
   margin-top: 0.5rem;
   border: none;
   border-radius: 6px;
-  padding: 4px;
+  
 }
 
 /* Grid Container */
@@ -118,7 +120,7 @@ button:active {
   width: 80vmin;
   height: 80vmin;
   border: 2px dashed #ffd1dc;
-  background-color: rgba(255, 255, 255, 0.5);
+  
   box-shadow: 0 0 15px #ff90c2;
   border-radius: 20px;
 }
@@ -140,7 +142,7 @@ button:active {
 
 .controls-top label {
   color: deeppink;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 1.1rem;
 }
 
